--- a/introToExpress/FirstExpressApp/views/hello.ejs
+++ b/introToExpress/FirstExpressApp/views/hello.ejs
@@ -1,2 +1,3 @@
-<h1>I am using VIM to edit this and I'm really really rusty</h1>
-<p>Yeah! I know!</p>
+<h1>I am using VIM to edit this and I'm really <%=  %> </h1>
+
+<p>Yeah! I Knows it!</p>
