add boilerplate to ejs

--- a/MoreExpress/EJSDemo/views/cbs.ejs
+++ b/MoreExpress/EJSDemo/views/cbs.ejs
@@ -1,5 +1,12 @@
-<h1>Everybody loves: <%= thingVar %></h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CBS</title>
+    </head>
+    <body>
+        <h1>Everybody loves: <%= thingVar %></h1>
+        <p>This is from the cbs.ejs file</p>
+        
+    </body>
+</html>
 
-
-
-<p>This is from the cbs.ejs file</p>
