--- a/MoreExpress/EJSDemo/views/posts.ejs
+++ b/MoreExpress/EJSDemo/views/posts.ejs
@@ -1,6 +1,14 @@
-<link rel="stylesheet" href="app.css">
 
-<h1>The Posts Page!</h1>
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="app.css">
+        <title>posts</title>
+    </head>
+    <body>
+       <h1>The Posts Page!</h1>
 
 <!--<% for(var i = 0; i < posts.length; i++){ %>-->
 <!--<li><%= posts[i].title %> - <strong><%= posts[i].author %></strong></li>-->
@@ -14,3 +22,6 @@
     <%= posts.title %> - <strong><%= posts.author %></strong>
 </li>
 <% }); %>
+        
+    </body>
+</html>
