edit to cbs.ejs

--- a/MoreExpress/EJSDemo/views/cbs.ejs
+++ b/MoreExpress/EJSDemo/views/cbs.ejs
@@ -4,7 +4,7 @@
         <title>CBS</title>
     </head>
     <body>
-        <h1>Everybody loves: <%= thingVar %></h1>
+        <h1>Everybody in the world loves: <%= thingVar %></h1>
         <p>This is from the cbs.ejs file</p>
         
     </body>
