adding project files

--- a/MoreExpress/EJSDemo/views/cbs.ejs
+++ b/MoreExpress/EJSDemo/views/cbs.ejs
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>CBS</title>
-    </head>
-    <body>
-        <h1>Everybody loves: <%= thingVar %></h1>
-        <p>This is from the cbs.ejs file</p>
+<% include partials/header %>
+
+<h1>Everybody loves: <%= thingVar %></h1>
+<p>This is from the cbs.ejs file</p>
+
+<% include partials/footer %>
         
-    </body>
-</html>
 
