--- a/MoreExpress/EJSDemo/views/home.ejs
+++ b/MoreExpress/EJSDemo/views/home.ejs
@@ -1,5 +1,9 @@
+<% include partials/header %>
+
 <h1>This is my home page!</h1>
 
 <h2>I love CBS NEWS</h2>
 
 <img src="https://pmcdeadline2.files.wordpress.com/2011/05/cbs_news_logo_20110519185103.jpg"></img>
+
+<% include partials/footer %>
