--- a/MoreExpress/EJSDemo/views/posts.ejs
+++ b/MoreExpress/EJSDemo/views/posts.ejs
@@ -1,14 +1,6 @@
+<% include partials/header %>
 
-
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="app.css">
-        <title>posts</title>
-    </head>
-    <body>
-       <h1>The Posts Page!</h1>
+<h1>The Posts Page!</h1>
 
 <!--<% for(var i = 0; i < posts.length; i++){ %>-->
 <!--<li><%= posts[i].title %> - <strong><%= posts[i].author %></strong></li>-->
@@ -22,6 +14,5 @@
     <%= posts.title %> - <strong><%= posts.author %></strong>
 </li>
 <% }); %>
-        
-    </body>
-</html>
+
+<% include partials/footer %>
