updated view file

--- a/MoreExpress/PostRequestDemo/views/friends.ejs
+++ b/MoreExpress/PostRequestDemo/views/friends.ejs
@@ -1,6 +1,7 @@
 <% include partials/header %>
 
 <h1>Friends List Goes Here</h1>
+<p>These are my Friends:  </p>
 
 <% friends.forEach(function(friend) { %>
 <li>I have a friend named: <%= friend %> </li>
