--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -1,25 +1,23 @@
 <% include partials/header %>
+
 <div class="container">
 <header class="jumbotron">
 <h1>Welcome to YelpCamp!</h1>
 <p>View our Hand-Picked campgrounds from all over the world</p>
-    <p>
-        <a class="btn btn-primary btn-lg"
-href="/campgrounds/new">Add new campground</a>
-    </p>
+<p><a class="btn btn-primary btn-lg" href="/campgrounds/new">Add new campground</a></p>
 </header>
-
-<div class="row" style="display:flex; flex-wrap: wrap;">
+    <div class="row" style="display:flex; flex-wrap: wrap;">
         <% campgrounds.forEach(function(camp){ %>
-    <div class="col-md-3 col-sm-6">
-       <div class="thumbnail">
-        <img src="<%= camp.image %>"></img>
-        <div class="caption">
-        <h4> <%= camp.name %> </h4>
-        </div>
-        </div>
+            <div class="col-md-3 col-sm-6">
+                <div class="thumbnail">
+                 <img src="<%= camp.image %>"></img>
+                 <div class="caption">
+                    <h4> <%= camp.name %> </h4>
+                </div>
+               </div>
+           </div>
+        <% }); %>
     </div>
-    <% }); %>
 </div>
-</div><% include partials/footer %>
+<% include partials/footer %>
 
