--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     </head>
     <body>
+        <nav class="navbar navbar-primary">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">YelpCamp</a>
