css change to img

--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
    <head>
     <title>Yelp Camp</title>
@@ -6,14 +6,14 @@
     <style type="text/css">
         .wrapper {
             display: grid;
-            grid-template-column: 200px, 200px;
+            grid-template-column: repeat(2, 2fr);
             
             grid-gap: 50px;
         }
         
         img {
-            height: 50%;
-            width: 50%;
+            height: 200px;
+            width: 200px;
         }
     </style>
     </head>
