--- a/YelpCamp/views/campgrounds.ejs
+++ b/YelpCamp/views/campgrounds.ejs
@@ -1,25 +1,27 @@
 <% include partials/header %>
-
-<header class="container">
-    <div class="jumbotron text-center">
-      <h1 class="display-3">Welcome To YelpCamp</h1>
-      <p class="lead">Here you will find some of the best camping spots from around the globe!</p>
-      <hr class="my-4">
-      <p>These campgrounds are chosen by you!  Please enter your favourite site below: </p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" href="/new" role="button">Enter a new site!</a>
-      </p>
-</header>
-<div class="container">
-    <div class="wrapper">
-        <% campgrounds.forEach(function(camp){ %>
-            <div class="thumbs">
-                 <img src="<%= camp.image %>"></img>
-                    <h4> <%= camp.name %> </h4>
+ <div class="container">
+     <header class="jumbotron">
+         <div class="container">
+             <h1>Welcome To YelpCamp!</h1>
+             <p>View our hand-picked campgrounds from all over the world</p>
+             <p>
+                <a class="btn btn-primary btn-large" href="/campgrounds/new">Add New Campground</a>
+             </p>
+         </div>
+     </header>
+     
+     <div class="row text-center" style="display:flex; flex-wrap: wrap;">
+        <% campgrounds.forEach(function(campground){ %>
+            <div class="col-md-3 col-sm-6">
+                <div class="thumbnail">
+                   <img src="<%= campground.image %>">
+                   <div class="caption">
+                       <h4><%= campground.name %></h4>
+                   </div>
+                </div>
             </div>
         <% }); %>
     </div>
 </div>
 
 <% include partials/footer %>
-
