--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -1,39 +1,21 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-   <head>
-    <title>Yelp Camp</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <style type="text/css">
-        .wrapper {
-            display: grid;
-            grid-template-column: repeat(2, 2fr);
-            
-            grid-gap: 50px;
-        }
-        
-        img {
-            height: 200px;
-            width: 200px;
-        }
-    </style>
+    <head>
+        <title>YelpCamp</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;" >
-            <a class="navbar-brand" href="/">YelpCamp</a>
-             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="/">Login<span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/">Sign Up</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="/">Logout</a>
-                  </li>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">YelpCamp</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/">Login</a></li>
+                    <li><a href="/">Sign Up</a></li>
+                    <li><a href="/">Logout</a></li>
                 </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
