--- a/RESTful Routing/RESTfulBlogApp/views/new.ejs
+++ b/RESTful Routing/RESTfulBlogApp/views/new.ejs
@@ -3,17 +3,18 @@
     <div class="ui huge header">New Blog</div>
     <form class="ui form" action="/blogs" method="POST">
     <div class="field">
+    <label for="">Title</label>
         <input type="text" name="blog[title]" placeholder="title">
     </div>
     <div class="field">
+    <label for="">Image</label>
         <input type="text" name="blog[image]" placeholder="image">
     </div>
     <div class="field">
-        <input type="text" name="blog[body]" placeholder="blog post goes here!">
+<label for="">Blog Content</label>
+        <textarea name="blog[body]"></textarea>
     </div>
-    <div class="field">
-        <input type="submit">
-     </div>
+        <input class="ui violet basic button" type="submit">
     </form>
 
 </div>
