--- a/RESTful Routing/RESTfulBlogApp/views/edit.ejs
+++ b/RESTful Routing/RESTfulBlogApp/views/edit.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header %>
 <div class="ui main text container segment">
     <div class="ui huge header"><%= blogs.title %></div>
-    <form class="ui form" action="/blogs" method="POST">
+    <form class="ui form" action="/blogs/<%= blogs._id %>?_method=PUT" method="POST">
     <div class="field">
     <label for="">Title</label>
         <input type="text" name="blog[title]" value="<%= blogs.title %>">
@@ -12,7 +12,7 @@
         </div>
     <div class="field">
 <label for="">Blog Content</label>
-        <textarea name="blog[body]"><%= blogs.image %></textarea>
+        <textarea name="blog[body]"><%= blogs.body%></textarea>
     </div>
         <input class="ui violet basic button" type="submit">
     </form>
