--- a/RESTful Routing/RESTfulBlogApp/views/show.ejs
+++ b/RESTful Routing/RESTfulBlogApp/views/show.ejs
@@ -10,7 +10,8 @@
             <div class="description">
                 <p><%- blogs.body %></p>
             </div>
-                <form action="/blogs/<%= blogs._id %>?_method=DELETE" method="POST">
+            <a class="ui orange basic button" href="/blogs/<%= blogs._id %>/edit">Edit</a>
+                <form id="delete" action="/blogs/<%= blogs._id %>?_method=DELETE" method="POST">
                     <button class="ui red basic button" type="submit">Delete</button>
                 </form>
         </div>
