--- a/YelpCamp/views/landing.ejs
+++ b/YelpCamp/views/landing.ejs
@@ -2,6 +2,7 @@
 <h1>Landing Page!</h1>
 
 <p>Welcome to the YelpCamp Page</p>
+<p>I hope you like your stay hear</p>
 
 <a href="/campgrounds">Goto Campground Page</a>
 
