include ../partials/... fix

--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,3 +1,4 @@
+<% include ../partials/header %> 
 
 <h1><%= campground.name %></h1>
 
@@ -9,4 +10,6 @@
     <p>
         <strong><%= comment.author %></strong> - <%= comment.text %></p>
 <% }) %>
+
+<% include ../partials/footer %>
 
