--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -1,3 +1,5 @@
+<% include ../partials/header %> 
+
 <div class="container">
     <div class="row">
         <h1 style="text-align: center">Create a New Campground<h1>
@@ -21,4 +23,6 @@
         </div>
     </div>
 </div>
+
+<% include ../partials/footer %>
 
