--- a/YelpCamp/views/comments/new.ejs
+++ b/YelpCamp/views/comments/new.ejs
@@ -1,3 +1,5 @@
+<% include ../partials/header %> 
+
 <div class="container">
     <div class="row">
             <h1 style="text-align: center">Add New Comment to <%= campground.name %></h1>
@@ -17,3 +19,4 @@
            </div>
     </div>
 </div>
+<% include ../partials/footer %>
