--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,4 +1,17 @@
 <% include ../partials/header %> 
+<div class="container">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <p class="lead"> Yelp Camp</p>
+                <div class="list-group">
+                <li class="list-group-item">Info 1</li>
+                <li class="list-group-item">Info 2</li>
+                <li class="list-group-item">Info 3</li>
+                <li class="list-group-item">Info 4</li>
+        </div>
+    </div>
+</div>
 
 <h1><%= campground.name %></h1>
 
@@ -12,6 +25,8 @@
     <p>
         <strong><%= comment.author %></strong> - <%= comment.text %></p>
 <% }) %>
+
+
 
 <% include ../partials/footer %>
 
