--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -4,12 +4,7 @@
         <div class="row">
             <div class="col-md-3">
                 <p class="lead"> Yelp Camp</p>
-                <div class="list-group">
-                <li class="list-group-item">Info 1</li>
-                <li class="list-group-item">Info 2</li>
-                <li class="list-group-item">Info 3</li>
-                <li class="list-group-item">Info 4</li>
-        </div>
+            </div>
     </div>
     <div class="col-md-9">
         <div class="thumbnail">
@@ -20,6 +15,10 @@
                 <h4><a href=""><%= campground.name %></a></h4>
                 <p><%= campground.description %></p>
                 <p><em>Submitted By</em> - <%= campground.author.username%></p>
+                <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                <button class="btn btn-danger">Delete</button>
+                </form>
             </div>
         </div>
         <div class="well">
