--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -16,7 +16,7 @@
                 <p><%= campground.description %></p>
                 <p><em>Submitted By</em> - <%= campground.author.username%></p>
                 <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                <form id="deleteForm" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
                 <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
@@ -34,6 +34,7 @@
                             <p>
                                 <%= comment.text %>
                             </p>
+                            <a class="btn btn-xs btn-warning" href="<%= campground._id%>/comments/<%= comment._id %>/edit">Edit</a>
                         </div>
                     </div>
                 <% }) %>
